--- a/FileMaker.mustache
+++ b/FileMaker.mustache
@@ -20,7 +20,7 @@
      {{/body.has_raw_body_with_tabs_or_new_lines}}
      {{! ----- }}
      {{#body.has_raw_body_without_tabs_or_new_lines}}
-     -d & \"{{{body.raw_body}}}\" \
+     -d \"{{{body.raw_body}}}\" \
      {{/body.has_raw_body_without_tabs_or_new_lines}}
      {{! ----- }}
      {{#body.has_long_body}}
