--- a/FileMaker.mustache
+++ b/FileMaker.mustache
@@ -34,7 +34,7 @@
      {{/body.has_multipart_body}}"
 
 /* ## URL For Request Below - Any Variables in The URL Will Need To Be Substituted - Set As Variable */
-{{#url}}{{{url}}}{{/url}}{{#params.has_query_parameters}}{{#params.query_parameters}}{{{params.query_parameters}}}{{/params.query_parameters}}{{/params.has_query_parameters}}"
+{{#url}}{{{url}}}{{/url}}{{#params.has_query_parameters}}{{#params.query_parameters}}{{{params.query_parameters}}}{{/params.query_parameters}}{{/params.has_query_parameters}}
 
 
      {{! ----- }}
